--- a/pom.xml
+++ b/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.rencare.pay</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>WXPay</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>demo</name>
+	<name>WXPay</name>
 
 	<!-- 继承父包 -->
 	<parent>
