--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>com.ning</groupId>
 			<artifactId>async-http-client</artifactId>
 			<version>1.9.40</version>
@@ -62,6 +66,7 @@
 			<artifactId>org.apache.servicemix.bundles.xpp3</artifactId>
 			<version>1.1.4c_4</version>
 		</dependency>
+
 	</dependencies>
 
 	<!--maven的插件 -->
