--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,11 @@ spring.http.encoding.charset=UTF-8
 spring.http.encoding.enabled=true 
 spring.http.encoding.force=true
 
+#Enable shutdown
+endpoints.shutdown.enabled=true
+#Unenable psw verify
+endpoints.shutdown.sensitive=false
+
 #datasource
 #spring.datasource.url=jdbc:mysql://192.168.0.129/ccoee?useUnicode=true&characterEncoding=UTF-8
 #spring.datasource.username=zhangxing
