--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,27 +17,21 @@ endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
 
 #datasource
-#spring.datasource.url=jdbc:mysql://192.168.0.129/ccoee?useUnicode=true&characterEncoding=UTF-8
-#spring.datasource.username=zhangxing
-#spring.datasource.password=zxp52077
-#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/rencarepay?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false"
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.max-active=20
+spring.datasource.max-idle=10
+spring.datasource.min-idle=5
+spring.datasource.initial-size=5
 
 #mybatis
-#mybatis.type-aliases-package=com.cckj.model
-#mybatis.mapper-locations=classpath:mapper/*.xml
-
-#mapper
-#mapper.mappers=tk.mybatis.mapper.common.Mapper
-#mapper.not-empty=false
-#mapper.identity=MYSQL
+mybatis.mapper-locations=classpath:mapper/*Mapper.xml
+mybatis.type-aliases-package=com.rencare.pay.entity
 
 #pagehelper
 #pagehelper.helperDialect=mysql
 #pagehelper.reasonable=true
 #pagehelper.supportMethodsArguments=true
 #pagehelper.params=count=countSql
-
-#logging
-#logging.level.root=INFO
-#logging.level.org.springframework.web=DEBUG
-#logging.level.org.zhangxing=DEBUG
