--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #app_id
-wx.appid=wx1111111111111
+wx.appid=wx4231662637b02e9e
 #Shang Hu Hao
 wx.mchid=1111111111
-#Mi yue
-wx.api.secret=abcdefagkjdddddd
+#Shang Hu hou tai Mi yue
+wx.api.secret=dd3cb1cbd006c5d999f4e1e0a4b4c85d
