完成支付功能，代码中，配置config.properties中的APP_ID，商户ID,商户密钥就可以直接使用了。

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #app_id
-wx.appid=wx4231662637b02e9e
+wx.appid=*********
 #Shang Hu Hao
-wx.mchid=1111111111
+wx.mchid=**********
 #Shang Hu hou tai Mi yue
-wx.api.secret=dd3cb1cbd006c5d999f4e1e0a4b4c85d
+wx.api.secret=*********************
