--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,17 @@ endpoints.shutdown.enabled=true
 endpoints.shutdown.sensitive=false
 
 #datasource
-spring.datasource.url=jdbc:mysql://localhost:3306/rencarepay?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false"
-spring.datasource.username=root
+spring.datasource.type=com.zaxxer.hikari.HikariDataSource
+#spring.datasource.url=jdbc:mysql://localhost:3306/rencarepay?useUnicode=true&amp;characterEncoding=UTF-8&amp;useSSL=false"
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driverClassName=com.mysql.jdbc.Driver
+
+spring.datasource.url = jdbc:sqlserver://localhost:1433;DatabaseName=rencarepay
+spring.datasource.username=sa
 spring.datasource.password=123456
-spring.datasource.driverClassName=com.mysql.jdbc.Driver
+spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
+
 spring.datasource.max-active=20
 spring.datasource.max-idle=10
 spring.datasource.min-idle=5
