阿里云发布该服务配置
1.
修改application.properties文件，取消服务器端口设置，因为阿里云已经存在tomcat服务器，且配置了端口；修改数据库为sqlserver，因为阿里云上已经发布的项目使用的都是sqlserver数据库；
2.
修改pom.xml依赖文件，取消spring-boot内置的tomcat服务器，依赖外置的tomcat和servlet库，且scope为provided，不会被打包到war包中；修改打包为war包；

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 # EMBEDDED SERVER CONFIGURATION (ServerProperties)
-server.port=8080
+#server.port=8686
 server.session-timeout=1800
 server.context-path=
 server.tomcat.max-threads=500
@@ -23,9 +23,9 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #spring.datasource.password=123456
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
-spring.datasource.url = jdbc:sqlserver://localhost:1433;DatabaseName=rencarepay
-spring.datasource.username=sa
-spring.datasource.password=123456
+spring.datasource.url = jdbc:sqlserver://localhost:1433;DatabaseName=rencare_test
+spring.datasource.username=rencare
+spring.datasource.password=sqlserver
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.datasource.max-active=20
