修改配置信息

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,8 +24,8 @@ spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 #spring.datasource.driverClassName=com.mysql.jdbc.Driver
 
 spring.datasource.url = jdbc:sqlserver://localhost:1433;DatabaseName=rencare_test
-spring.datasource.username=rencare
-spring.datasource.password=sqlserver
+spring.datasource.username=********
+spring.datasource.password=********
 spring.datasource.driverClassName=com.microsoft.sqlserver.jdbc.SQLServerDriver
 
 spring.datasource.max-active=20
