--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #app_id
-wx.appid=wx4231662637b02e9e
+wx.appid=********
 #Shang Hu Hao
-wx.mchid=1486288992
+wx.mchid=********
 #Shang Hu hou tai Mi yue
-wx.api.secret=rencarehealth20170727100535baoan
+wx.api.secret=************************
